<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF050923"
    tools:context="com.developer.tonny.design.Fragments.FirstFragment">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="bottom|right"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        app:backgroundTint="#FF17A693"
        app:elevation="4dp"
        app:fabSize="normal"
        app:srcCompat="@drawable/ic_phone" />

    <TextView
        android:id="@+id/textView_RegistroTitF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:text="@string/textView_RegistroTitF"
        android:textColor="@android:color/white"
        android:textSize="24sp" />

    <Button
        android:id="@+id/button_Insulin"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_below="@+id/textView_RegistroTitF"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"
        android:background="@drawable/button_background_insulin"
        android:text="@string/button_newInsulin"
        android:textColor="@android:color/white"
        android:textSize="21sp" />

    <Button
        android:id="@+id/button_RegistroIn"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/button_Insulin"
        android:layout_alignStart="@+id/button_Insulin"
        android:layout_below="@+id/button_Insulin"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_background_insulin"
        android:text="@string/button_records"
        android:textColor="@android:color/white"
        android:textSize="21sp" />

    <Button
        android:id="@+id/button_GlucosaIn"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/button_RegistroIn"
        android:layout_alignStart="@+id/button_RegistroIn"
        android:layout_below="@+id/button_RegistroIn"
        android:layout_marginTop="37dp"
        android:background="@drawable/button_background_insulin"
        android:text="@string/button_GlucoseIn"
        android:textColor="@android:color/white"
        android:textSize="21sp" />

</RelativeLayout>
